<resources>
    <string name="app_name">OFKbd</string>

    <string name="yourName" translatable="false">তোমার নাম</string>
    <string name="yourEmail" translatable="false">তোমার ইমেইল (Optional)</string>
    <string name="yourAge" translatable="false">তোমার বয়স</string>
    <string name="yourPassword" translatable="false">পাসওয়ার্ড সেট করো</string>
    <string name="password" translatable="false">পাসওয়ার্ড</string>
    <string name="yourPasswordLimit" translatable="false">সর্বোচ্চ ৬ ক্যারেক্টার</string>
    <string name="yourAvatar" translatable="false">যেকোনো একটি এভাটার সিলেক্ট করো</string>
    <string name="yourCourse" translatable="false">আমার কোর্স সমূহ</string>
    <string name="previousAccount" translatable="false">একাউন্ট থাকলে এখান থেকে <font color="#00c1c3">লগ ইন</font> করো</string>


    <string name="search" translatable="false">কোন কোর্সটি করতে চাও</string>

    <string name="searchResult" translatable="false">সার্চ</string>

    <string name="roboticsCourseHeadline" translatable="false">রোবোটিক্সের কোর্সসমুহ</string>
    <string name="artCourseHeadline" translatable="false">আর্টের কোর্সসমুহ</string>
    <string name="calligraphyCourseHeadline" translatable="false">ক্যালিগ্রাফির কোর্সসমুহ</string>
    <string name="caseCourseHeadline" translatable="false">কেইস সল্ভিং কোর্সসমুহ</string>
    <string name="craftCourseHeadline" translatable="false">ক্রাফটের কোর্সসমুহ</string>
    <string name="criticalCourseHeadline" translatable="false">ক্রিটিক্যাল থিংকিং কোর্সসমুহ</string>
    <string name="paintingCourseHeadline" translatable="false">ডিজিটাল পেইন্টিং কোর্সসমুহ</string>
    <string name="guitarCourseHeadline" translatable="false">গিটার কোর্সসমুহ</string>
    <string name="programmingCourseHeadline" translatable="false">প্রোগ্রামিং কোর্সসমুহ</string>
    <string name="rate" translatable="false">আমাদের এপটি তোমাদের কেমন লাগলো</string>
    <string name="share" translatable="false">OFK এপ বন্ধুদের সাথে শেয়ার করো</string>


    <string name="home" translatable="false">হোম</string>
    <string name="progress" translatable="false">প্রগ্রেস</string>
    <string name="earnedBadge" translatable="false">Earned Badges</string>
    <string name="subProgress" translatable="false">Course Progress</string>
    <string name="more" translatable="false">কার্যক্রম</string>
    <string name="ourWorks" translatable="false">আমাদের কার্যক্রম</string>
    <string name="profile" translatable="false">প্রোফাইল</string>
    <string name="profileEnglish" translatable="false">Profile Details</string>


    <string name="trainer" translatable="false">ট্রেইনার</string>
    <string name="member" translatable="false">টিম মেম্বার</string>
    <string name="contributor" translatable="false">কন্ট্রিবিউটর</string>

    <string name="joinUs" translatable="false">জয়েন করো আমাদের সাথে</string>
    <string name="blog" translatable="false">ঘুরে আসো আমাদের ব্লগ থেকে</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="one" translatable="false">1</string>

    <string name="video" translatable="false">ভিডিও</string>
    <string name="quiz" translatable="false">কুইজ</string>
    <string name="resource" translatable="false">রিসোর্স</string>


    <string name="video0result" translatable="false">0 ভিডিও</string>
    <string name="course0result" translatable="false">0 কোর্স</string>

    <string name="notFoundCourse" translatable="false">কোর্স খুঁজে পাওয়া যায় নি</string>
    <string name="notFoundVideo" translatable="false">ভিডিও খুঁজে পাওয়া যায় নি</string>
    <string name="notFoundQuiz" translatable="false">কুইজ পাওয়া যায় নি</string>
    <string name="notFoundResource" translatable="false">রিসোর্স পাওয়া যায় নি</string>
    <string name="notVerified" translatable="false">মোবাইল নাম্বার ভেরিফাই করা হয় নি</string>

    <string name="progressButton" translatable="false">চলো</string>

    <string name="myBadge" translatable="false">আমার ব্যাজ</string>
    <string name="upComingBadge" translatable="false">Upcoming Badge</string>
    <string name="summary" translatable="false">সামারি</string>

    <string name="videoFinished" translatable="false">ভিডিও</string>
    <string name="courseFinished" translatable="false">কোর্স</string>
    <string name="quizFinished" translatable="false">কুইজ</string>
    <string name="first_last_name_only" translatable="false">First &amp; Last Name Only</string>

    <string name="intro" translatable="false">শিখো, শেখাও, \nদেখাও তোমার প্রতিভা বিশ্বকে</string>

    <string name="youNumber" translatable="false">তোমার মোবাইল নাম্বার</string>
    <string name="youOTP" translatable="false">ওটিপি কোড</string>
    <string name="youNumberExample" translatable="false">যেমন : 01712345678</string>
    <string name="next" translatable="false">পরবর্তী</string>
    <string name="yourNumberOTP" translatable="false">মোবাইল নাম্বারটি ভেরিফিকেশনের \nজন্য একটি ওটিপি কোড পাঠানো হবে</string>
    <string name="yourOTPSent" translatable="false">মোবাইল নাম্বারটি ভেরিফিকেশনের \nজন্য একটি ওটিপি কোড পাঠানো হয়েছে</string>
    <string name="avatarSelected" translatable="false">এভাটার সিলেক্ট করা হয়েছে</string>
    <string name="interested_text" translatable="false">সার্টিফিকেট সহ কোর্সে আগ্রহী</string>
    <string name="not_interested_text" translatable="false">কোর্সে আগ্রহী</string>
    <string name="set" translatable="false">সেট করো</string>


    <string name="premium_course_detail_text_1" translatable="false">
        প্রিয় শিক্ষার্থী, আমাদের সবগুলো কোর্স শিক্ষার্থীদের জন্যে বিনামূল্যে সবসময়। আমাদের এপ অথবা ওয়েবসাইট ব্যবহার করে তুমি যে কোন কোর্স করতে পারবে ঘরে বসে খুব সহজে।
    </string>

    <string name="premium_course_detail_text_2">

    <b>অনলাইন সার্টিফিকেট পাওয়ার নিয়মঃ</b> প্রত্যেক কোর্সের সাথে আমাদের পক্ষ থেকে সে কোর্সের একটি অনলাইন সার্টিফিকেট প্রদান করা হয়ে থাকে। এই অনলাইন সার্টিফিকেট পাওয়ার জন্যে আগ্রহী হলে ৩০ টাকা তোমার রবি বা এয়ারটেল মোবাইল রিচার্জ থেকে কেটে নেয়া হবে।

সে অনলাইন সার্টিফিকেট পেতে কোর্স শুরুর প্রথমে <b>"সার্টিফিকেট সহ কোর্সে আগ্রহী"</b> লেখা বাটনটিতে ক্লিক করো।

</string>
    <string name="premium_course_detail_text_3">

    <b>প্রশ্নঃ আমি কি সার্টিফিকেট ছাড়া বিনামূল্যে কোর্স করতে পারবো? </b>  <br></br>
 <br></br> <b> উত্তরঃ</b> হ্যাঁ অবশ্যই। সার্টিফিকেট ছাড়া তুমি পুরো কোর্স সম্পন্ন করতে পারবে।

</string>
    <string name="premium_course_detail_text_4">

     <b>প্রশ্নঃ সার্টিফিকেট পেতে টাকা কিভাবে দিব?</b>  <br></br>
    <br></br>    <b>উত্তরঃ</b> অনলাইন সার্টিফিকেট পেতে যে কোন কোর্স শুরুর করার প্রথমে "সার্টিফিকেট সহ কোর্সে আগ্রহী" লেখা বাটনটিতে ক্লিক করো। এই অনলাইন সার্টিফিকেট পাওয়ার জন্যে আগ্রহী হলে ৩০ টাকা তোমার রবি বা এয়ারটেল মোবাইল রিচার্জ থেকে কেটে নেয়া হবে।

</string>
    <string name="premium_course_detail_text_5">

<b>প্রশ্নঃ টাকা দেয়ার পর আমি সার্টিফিকেট কিভাবে পাবো?</b>  <br></br>
  <br></br>     <b>উত্তরঃ</b> টাকা জমা দেয়ার এক সপ্তাহের মধ্যে তোমার সার্টিফিকেট তৈরি হলে তা তোমার ড্যাশবোর্ডে তুমি দেখতে পাবে। সেখান থেকে তুমি ডাউনলোড করে নিতে পারবে।

</string>

    <string name="continue_course_dialog" translatable="false">

        প্রিয় শিক্ষার্থী, এই কোর্সটি তুমি সম্পূর্ণ বিনামূল্যে  করতে পারবে। পুরো কোর্স সম্পন্ন করার পর OFK থেকে এই কোর্সের অনলাইন  সার্টিফিকেট পাওয়ার জন্যে আগ্রহী হলে ৩০ টাকা তোমার রবি বা এয়ারটেল মোবাইল রিচার্জ থেকে কেটে নেয়া হবে। সার্টিফিকেট নিতে না চাইলে শুধুমাত্র কোর্সে আগ্রহী তে ক্লিক করো। তাহলে কোন ধরণের চার্জ কাটা হবে না।

        <font color="#531295"><b>বিস্তারিত জানতে এখানে ক্লিক করো</b></font>

    </string>

</resources>