<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:scrollbars="none">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/orange_gradient"
            android:text="OFK Certification"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialogTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/solaimanlipi"
            android:padding="0dp"
            android:text="@string/premium_course_detail_text_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/dialogTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/solaimanlipi"
            android:padding="0dp"
            android:text="@string/premium_course_detail_text_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/dialogTextView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/solaimanlipi"
            android:padding="0dp"
            android:text="@string/premium_course_detail_text_3"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/dialogTextView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/solaimanlipi"
            android:padding="0dp"
            android:text="@string/premium_course_detail_text_4"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/dialogTextView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/solaimanlipi"
            android:padding="0dp"
            android:text="@string/premium_course_detail_text_5"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </LinearLayout>
</ScrollView>