<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Fragments.BottomDialog">


    <ImageView
        android:id="@+id/closeBottomSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_cross_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@android:color/darker_gray" />

    <TextView
        android:id="@+id/dialogTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/solaimanlipi"
        android:padding="16dp"
        android:text="@string/continue_course_dialog"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/closeBottomSheet" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/dialogTextView">

        <Button
            android:id="@+id/notInterestedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_outline_bg"
            android:fontFamily="@font/solaimanlipi"
            android:text="@string/not_interested_text"
            android:textSize="@dimen/inner_body_text_size" />

        <Button
            android:id="@+id/interestedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@drawable/button_fill_bg"
            android:fontFamily="@font/solaimanlipi"
            android:text="@string/interested_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/inner_body_text_size" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>