<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivityFragment.InputNumberFragment">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_above="@+id/inputPhoneNumberCardView"
        android:layout_centerHorizontal="true"
        android:src="@drawable/input_otp_png" />

    <androidx.cardview.widget.CardView
        android:id="@+id/inputPhoneNumberCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/solaimanlipi"
                android:gravity="center_horizontal"
                android:text="@string/youNumber"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                android:background="@drawable/input_number_edittext"
                android:fontFamily="@font/solaimanlipi"
                android:gravity="center"
                android:hint="@string/youNumberExample"
                android:inputType="phone"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/solaimanlipi"
                android:gravity="center_horizontal"
                android:text="@string/yourNumberOTP"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/nextButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                android:background="@drawable/next_button"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/solaimanlipi"
                    android:text="@string/next"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="13dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="4dp"
                        android:src="@drawable/ic_baseline_arrow_forward_ios_24" />

                </androidx.cardview.widget.CardView>


            </RelativeLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>