<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <View
        android:id="@+id/waveView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_wave" />

    <ImageView
        android:layout_centerHorizontal="true"
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/waveView"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ofklogo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/inputPhoneNumberCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_margin="16dp"
        app:cardCornerRadius="40dp">

        <EditText
            android:id="@+id/yourNameEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/yourName"
            android:inputType="text"
            android:padding="16dp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputPhoneNumberCardView"
        android:layout_margin="16dp"
        app:cardCornerRadius="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/yourAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/kalpurush"
                android:padding="8dp"
                android:text="@string/yourAge"
                android:textColor="#59163b"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ageRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                tools:listitem="@layout/age_layout" />

            <TextView
                android:id="@+id/yourAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/yourAvatar"
                android:textColor="#59163b"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/avatarRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="8dp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>