<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InfoActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/info_top" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/solaimanlipi"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/yourName"
                    android:textColor="@color/textColorGrey"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/yourNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/input_number_edittext"
                    android:fontFamily="@font/solaimanlipi"
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/solaimanlipi"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/yourPassword"
                    android:textColor="@color/textColorGrey"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/input_number_edittext"
                    android:fontFamily="@font/solaimanlipi"
                    android:hint="@string/yourPasswordLimit"
                    android:inputType="numberPassword"
                    android:maxLength="6"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/solaimanlipi"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/yourEmail"
                    android:textColor="@color/textColorGrey"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/yourEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/input_number_edittext"
                    android:fontFamily="@font/solaimanlipi"
                    android:inputType="textEmailAddress"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/solaimanlipi"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/yourAvatar"
                    android:textColor="@color/textColorGrey"
                    android:textSize="16sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/avatarRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:paddingBottom="8dp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/progressButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:background="@drawable/next_button"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/solaimanlipi"
            android:text="পরবর্তী"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            app:cardCornerRadius="13dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="4dp"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>


</LinearLayout>